# tdd-ai-py

./: .flake8  .gitignore  .pre-commit-config.yaml  FUNCTIONAL_PROGRAMMING_SUMMARY.md  Makefile  PYTHON_CODING_PRINCIPLES.md  README.md  huffman_compression.py  huffman_decompression.py  pyproject.toml  test_compression.sh
.github/workflows/: ci.yml
docs/: README.md
docs/dev/: .dev-instructions.md
docs/principles/: CODING_PRINCIPLES.md  PYTHON_TDD_PRINCIPLES.md  TDD_PRINCIPLES.md
src/tdd_ai_py/: __init__.py  bit_reader.py  bit_writer.py  calculator.py  cli_utils.py  compress.py  compressed_data_decoder.py  compressor.py  data_decoder.py  decompress.py  decompressor.py  frequency_analyzer.py  frequency_counter.py  functional_examples.py  functional_utils.py  higher_order_functions.py  huffman.py  huffman_encoder.py  huffman_tree_builder.py  immutable_data.py  result_types.py  safe_compression.py  stream_compressor.py  tree_deserializer.py  tree_serializer.py
src/tdd_ai_py/compression/: __init__.py  bit_writer.py  compressor.py  huffman_encoder.py  huffman_tree_builder.py  stream_utils.py  tree_serializer.py
src/tdd_ai_py/decompression/: __init__.py  bit_reader.py  data_decoder.py  decompressor.py  tree_deserializer.py
tests/: __init__.py  test_bit_reader.py  test_bit_writer.py  test_calculator.py  test_compressed_data_decoder.py  test_compressor.py  test_data_decoder.py  test_decompressor.py  test_frequency_analyzer.py  test_frequency_counter.py  test_helpers.py  test_huffman.py  test_huffman_encoder.py  test_huffman_tree_builder.py  test_round_trip.py  test_stream_compressor.py  test_tree_deserializer.py  test_tree_serializer.py
